--- a/WebContent/searchResult.html
+++ b/WebContent/searchResult.html
@@ -26,9 +26,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- js -->
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<!-- //js -->
-	<!-- radio-buttons -->
-	<link rel="stylesheet" href="css/sky-forms.css">
-	<!-- //radio-buttons -->
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,900,800' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 </head>
@@ -40,31 +37,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<h3>Credit Card Recommendation</h3>
 		</div>
 		<!-- whole container-->
-		<hr>
 		<div class="one-item">
-			<div class="card-image"><img src="images/citi-prestige-card.png"></div>
+			<p class="tag">Your Query: </p><p class="text-body"><%=queryText %></p>
+			<hr>
+			<div class="card-image"><img src="images/8.png"></div>
 			<div class="information">
-				<p class="tag">Bank Name: </p> <p class="text-body">Citi Bank</p>
+				<p class="tag">Bank Name: </p><p class="text-body"><%=bankName%></p>
 				<br>
-				<p class="tag">Card Name: </p> <p class="text-body">Prestige</p>
+				<p class="tag">Card Name: </p><p class="text-body"><%=cardName%></p>
 				<br>
-				<p class="tag">Bonus: </p> <p class="text-body">Airport Loung</p>
+				<p class="tag">Bonus: </p><p class="text-body"><%=bonus%></p>
 			</div>
 		</div>
-		<hr>
-		<!--
-		<div class="one-item">
-			<div class="card-image"><img src="images/ritz_carlton_card.png"></div>
-			<div class="information">
-				<p class="tag">Bank Name: </p> <p class="text-body">Chase</p>
-				<br>
-				<p class="tag">Card Name: </p> <p class="text-body">Ritz-carlton</p>
-				<br>
-				<p class="tag">Bonus: </p> <p class="text-body">Gold elite status  at  Ritz Carlton reward program.</p>
-			</div>
-		</div>
-		<hr>-->
+
 		<div class="link-group">
+			<hr>
 			<h4>Related Links</h4>
 			<a href="http://www.flyertalk.com/forum/citi-thankyou-rewards/1735992-citi-prestige-change-concierge-operator-ten-aspire.html" target="_blank">Citi Prestige - change in concierge operator (Ten to Aspire)</a>
 			<br>
